flag extras added to udev. xinit removed from masked packages

--- a/paludis/etc/use.conf.d/per-package.conf
+++ b/paludis/etc/use.conf.d/per-package.conf
@@ -59,6 +59,7 @@ sys-apps/hal dmi -pam_console
 sys-apps/pciutils -zlib
 sys-devel/gcc doc
 sys-devel/gdb expat doc
+sys-fs/udev extras
 sys-kernel/linux-headers gcc64
 sys-libs/glibc userlocales glibc-omitfp nptlonly
 
