use flags and masks updated

--- a/paludis/etc/package_mask.conf
+++ b/paludis/etc/package_mask.conf
@@ -38,6 +38,7 @@ media-sound/amarok:4.1
 =sys-apps/grep-2.6.1
 =app-text/poppler-0.12.4-r2
 =app-text/poppler-0.12.3-r6
+=app-text/poppler-0.12.4-r3
 =net-analyzer/wireshark-1.2.7
 
 =sys-apps/grep-2.6.3
