--- a/paludis/etc/use.conf.d/per-package.conf
+++ b/paludis/etc/use.conf.d/per-package.conf
@@ -32,6 +32,7 @@ media-libs/gd fontconfig
 media-sound/amarok -mysql mp4 real
 media-sound/alsa-utils -midi
 media-sound/audacity id3tag ladspa libsamplerate soundtouch twolame
+media-sound/sox amr ao sndfile
 media-video/mplayer enca real quicktime -doc
 
 media-gfx/graphviz gtk pango
