--- a/paludis/etc/package_mask.conf
+++ b/paludis/etc/package_mask.conf
@@ -44,3 +44,4 @@ media-sound/amarok:4.1
 =sys-apps/grep-2.6.3
 =www-client/opera-10.53_pre6330
 =dev-java/ant-nodeps-1.8.1
+=net-firewall/iptables-1.4.8-r1
