any license is okay

--- a/portage/etc/make.conf
+++ b/portage/etc/make.conf
@@ -30,7 +30,7 @@ ALL_USE="$G_USE_HARDWARE $G_USE_SND $G_USE_PIC $G_USE_IM
 USE="$ALL_USE"
 
 ACCEPT_KEYWORDS="~x86"
-ACCEPT_LICENSE="skype-eula"
+ACCEPT_LICENSE="*"
 
 FEATURES="nostrip parallel-fetch fixpackages"
 
