--- a/paludis/etc/package_mask.conf
+++ b/paludis/etc/package_mask.conf
@@ -16,7 +16,7 @@ media-sound/amarok:4.1
 >=kde-misc/yakuake-2.9
 =media-libs/xine-lib-1.1.16.2
 # v5 makes ivr unable to reconnect to mysqld
->=dev-db/myodbc-5
+#>=dev-db/myodbc-5
 >=dev-db/mysql-5.1
 >=virtual/mysql-5.1
 
@@ -45,3 +45,5 @@ media-sound/amarok:4.1
 =www-client/opera-10.53_pre6330
 =dev-java/ant-nodeps-1.8.1
 =net-firewall/iptables-1.4.8-r1
+
+=dev-lang/python-3.1.2-r4
