the format of paludis repository config file changed

--- a/paludis/etc/repositories/gentoo.conf
+++ b/paludis/etc/repositories/gentoo.conf
@@ -2,6 +2,6 @@ location = /usr/portage
 sync = rsync://rsync.gentoo.org/gentoo-portage
 profiles = ${location}/profiles/default/linux/amd64/10.0/desktop
 distdir = /usr/portage/distfiles
-format = ebuild
+format = e
 names_cache = /var/cache/paludis/names
 builddir = /usr/local/store/tmp/paludis
