--- a/paludis/etc/repositories/kde-sunset.conf
+++ b/paludis/etc/repositories/kde-sunset.conf
@@ -3,6 +3,6 @@ location = /usr/local/portage/layman/kde-sunset
 sync = git://git.overlays.gentoo.org/proj/kde-sunset.git
 names_cache = /var/cache/paludis/names
 write_cache = /var/cache/paludis/metadata
-format = ebuild
+format = e
 builddir = /usr/local/store/tmp/paludis
 
