--- a/paludis/etc/repositories/xgr.conf
+++ b/paludis/etc/repositories/xgr.conf
@@ -3,6 +3,6 @@ location = /root/src/xgr
 sync = git://github.com/dgoncharov/xgr.git
 names_cache = /var/cache/paludis/names
 write_cache = /var/cache/paludis/metadata
-format = ebuild
+format = e
 builddir = /usr/local/store/tmp/paludis
 
