--- a/paludis/etc/repositories/paludis-overlay.conf
+++ b/paludis/etc/repositories/paludis-overlay.conf
@@ -3,5 +3,5 @@ location = /var/paludis/repositories/paludis-overlay/
 sync = git://git.pioto.org/paludis-overlay.git
 names_cache = /var/cache/paludis/names
 write_cache = /var/cache/paludis/metadata
-format = ebuild
+format = e
 builddir = /usr/local/store/tmp/paludis
