--- a/portage/etc/make.conf
+++ b/portage/etc/make.conf
@@ -1,7 +1,7 @@
 CHOST="i686-pc-linux-gnu"
-CFLAGS="-march=pentium3 -O2 -pipe -fomit-frame-pointer"
+CFLAGS="${CFLAGS} -march=pentium3 -O2 -pipe -fomit-frame-pointer"
 CXXFLAGS="${CFLAGS}"
-LDFLAGS="-Wl,-O1"
+LDFLAGS="${LDFLAGS} -Wl,-O1"
 MAKEOPTS="-j2"
 
 G_USE_HARDWARE="acpi -3dnow -3dnowext mmx mmxext sse sse2 ssse3 -apm -bluetooth -ieee1394 -lirc -pcmcia -pda usb -v4l -cups"
