--- a/mutt/.muttrc
+++ b/mutt/.muttrc
@@ -6,3 +6,6 @@ set use_envelope_from=yes
 set pop_host=pops://gonch.dmitry@pop.gmail.com
 set pop_delete=no
 
+ignore *
+unignore from date subject to cc bcc
+
