--- a/mutt/.muttrc
+++ b/mutt/.muttrc
@@ -9,3 +9,8 @@ set pop_delete=no
 ignore *
 unignore from date subject to cc bcc
 
+color header yellow default "^.*$"
+color attachment blue default
+color body magenta default "^>.*$"
+color body magenta default "^[Oo]n.+wrote:$"
+
