--- a/mutt/.muttrc
+++ b/mutt/.muttrc
@@ -3,14 +3,19 @@ set from=dgoncharov@users.sf.net
 set use_from=yes
 set use_envelope_from=yes
 
+set spoolfile=~/Mail/inbox
+set folder = ~/Mail
+
 set pop_host=pops://gonch.dmitry@pop.gmail.com
 set pop_delete=no
 
 ignore *
-unignore from date subject to cc bcc
+unignore from: date subject to cc bcc
 
 color header yellow default "^.*$"
 color attachment blue default
-color body magenta default "^>.*$"
-color body magenta default "^[Oo]n.+wrote:$"
+color quoted white default
+#color body white default "^[Oo]n.+wrote:$"
+
+set help=no
 
