openssl use flag of sipp replaced with ssl

--- a/paludis/etc/use.conf.d/per-package.conf
+++ b/paludis/etc/use.conf.d/per-package.conf
@@ -53,7 +53,7 @@ net-print/cups samba
 net-proxy/squid -samba -ldap -mysql -sqlite
 net-wireless/bluez-utils -dbus udev
 >=net-wireless/bluez-utils-3.8 udev fuse glib obex
-net-voip/sipp openssl pcap
+net-voip/sipp ssl pcap
 
 sys-apps/hal dmi -pam_console
 # HAL don't like `zlib` here ;()
