--- a/paludis/etc/repositories/paludis-extras.conf
+++ b/paludis/etc/repositories/paludis-extras.conf
@@ -3,6 +3,6 @@ location = /var/paludis/repositories/paludis-extras
 sync = rsync://paludis-extras.org/paludis-extras rsync://drzile.dyndns.org/paludis-extras rsync://server.guldbrand.net/paludis-extras rsync://ns-linux.org/paludis-extras/
 names_cache = /var/cache/paludis/names
 write_cache = /var/cache/paludis/metadata
-format = ebuild
+format = e
 importance = 10
 builddir = /usr/local/store/tmp/paludis
