kamailio use flags

--- a/paludis/etc/use.conf.d/per-package.conf
+++ b/paludis/etc/use.conf.d/per-package.conf
@@ -19,6 +19,7 @@ dev-java/sun-jre-bin nsplugin
 dev-lang/php calendar session spl nls
 dev-libs/boost debug doc icu bjam eselect python expat tools -strip
 dev-scheme/guile deprecated discouraged
+dev-util/cmake -qt4 -ncurses
 dev-util/git tk
 dev-util/subversion -kde -perl -python -berkdb webdav-neon extras vim-syntax
 
@@ -39,8 +40,11 @@ media-gfx/graphviz gtk pango
 
 net-analyzer/trafshow -slang
 net-analyzer/wireshark gtk pcap
+net-dialup/freeradius mysql -pam
 net-dns/bind resolvconf
 net-dns/dnsmasq resolvconf
+net-misc/kamailio group_standard group_radius tls kex pv siputils -debug
+net-misc/ser mysql radius
 net-nds/openldap -berkdb
 net-libs/libsoup gnome
 net-libs/libsrtp pic
