kamailio useflags changed: removed group_radius, added auth auth_db db_mysql

--- a/paludis/etc/use.conf.d/per-package.conf
+++ b/paludis/etc/use.conf.d/per-package.conf
@@ -43,7 +43,7 @@ net-analyzer/wireshark gtk pcap
 net-dialup/freeradius mysql -pam
 net-dns/bind resolvconf
 net-dns/dnsmasq resolvconf
-net-misc/kamailio group_standard group_radius tls kex pv siputils -debug
+net-misc/kamailio group_standard tls kex pv siputils auth auth_db db_mysql -debug
 net-misc/ser mysql radius
 net-nds/openldap -berkdb
 net-libs/libsoup gnome
