--- a/paludis/etc/use.conf.d/per-package.conf
+++ b/paludis/etc/use.conf.d/per-package.conf
@@ -70,6 +70,8 @@ sys-libs/glibc userlocales glibc-omitfp nptlonly
 
 
 x11-libs/qt
+x11-libs/qt-qt3support -kde
+x11-libs/qt-webkit -kde
 x11-misc/xscreensaver insecure-savers
 sys-apps/initng-ifiles net runlevels vim fixes
 mail-mta/exim dovecot-sasl exiscan exiscan-acl ldap lmtp mysql radius sasl spf srs
