phase test is on for remv, libunixsignal and libtimerpool

--- a/paludis/etc/use.conf
+++ b/paludis/etc/use.conf
@@ -11,7 +11,7 @@
 
 */* strip -debug
 */* acpi 3dnow 3dnowext mmx mmxext sse sse2 ssse3 acpi -apm -ieee1394 -lirc lm_sensors -pcmcia -pda usb -v4l
-*/* a52 aac alsa -gstreamer -arts -esd -nas -oss -xmms
+*/* a52 aac alsa -gstreamer -arts -esd -nas -oss -xmms -accessibility
 */* -opengl -tiff -poppler-data
 */* -aim -icq -yahoo -msn -jingle
 */* -ipv6 -slp -bluetooth
@@ -24,4 +24,7 @@
 */* -acl bash-completion eselect -doc -nls -gpm
 */* kdehiddenvisibility -gnome -gtk -motif -xfce fam
 
+app-misc/remv BUILD_OPTIONS: optional_tests
+dev-libs/libtimerpool BUILD_OPTIONS: optional_tests
+dev-libs/libunixsignal BUILD_OPTIONS: optional_tests
 
