--- a/paludis/etc/use.conf
+++ b/paludis/etc/use.conf
@@ -17,7 +17,7 @@
 */* -ipv6 -slp -bluetooth
 */* -nis -ldap -kerberos
 */* -cups subversion
-*/* X dga dri -xinerama xcomposite -sdl
+*/* X dga dri -xinerama xcomposite -sdl -cairo
 */* boost posix mmap nptl nptlonly pcntl ithreads threads
 */* -fortran -java -perl -python
 */* cdr dvdread dvd dvdr encode ffmpeg mpeg xvid
