--- a/paludis/etc/use.conf.d/per-package.conf
+++ b/paludis/etc/use.conf.d/per-package.conf
@@ -10,18 +10,22 @@ app-misc/mc -samba -ncurses
 app-misc/screen multiuser
 
 app-office/akonadi-server -mysql
+app-text/lcdf-typetools kpathsea
+app-text/texlive -X -xml -png
+app-text/texlive-core -X
 app-text/poppler qt3
 app-text/ptex -unicode -iconv -X
 
 dev-cpp/gtkmm accessibility
 dev-lang/erlang doc smp kpoll
 dev-java/sun-jre-bin nsplugin
+dev-lang/perl ithreads
 dev-lang/php calendar session spl nls
 dev-libs/boost debug doc icu bjam eselect python expat tools -strip
 dev-scheme/guile deprecated discouraged
 dev-util/cmake -qt4 -ncurses
 dev-util/git tk
-dev-util/subversion -kde -perl -python -berkdb webdav-neon extras vim-syntax
+dev-vcs/subversion -kde -perl -python -berkdb -webdav-neon -dso extras vim-syntax
 
 kde-base/kopete addbookmarks alias autoreplace connectionstatus contactnotes highlight history irc latex nowlistening sametime sms statistics texteffect
 
@@ -29,6 +33,7 @@ mail-client/mozilla-thunderbird mozcalendar
 mail-client/mutt -berkdb -crypt -debug -doc -gdbm -gnutls -gpg -idn imap mbox nls nntp pop -qdbm -sasl -sidebar smime smtp ssl -vanilla
 media-gfx/graphviz gtk pango
 media-libs/a52dec djbfft
+media-libs/freetype kpathsea
 media-libs/gd fontconfig
 media-sound/amarok -mysql mp4 real
 media-sound/alsa-utils -midi
@@ -59,7 +64,7 @@ net-wireless/bluez-utils -dbus udev
 >=net-wireless/bluez-utils-3.8 udev fuse glib obex
 net-voip/sipp ssl pcap
 
-sys-apps/hal dmi -pam_console
+sys-apps/hal  -acpi -X -consolekit -crypt 
 # HAL don't like `zlib` here ;()
 sys-apps/pciutils -zlib
 sys-devel/gcc doc
