new masks and use flags

--- a/paludis/etc/package_mask.conf
+++ b/paludis/etc/package_mask.conf
@@ -16,10 +16,6 @@ media-sound/amarok:4.1
 =sys-apps/module-init-tools-3.6-r1
 >=kde-misc/yakuake-2.9
 =media-libs/xine-lib-1.1.16.2
-# v5 makes ivr unable to reconnect to mysqld
-#>=dev-db/myodbc-5
->=dev-db/mysql-5.1
->=virtual/mysql-5.1
 
 =net-misc/ntp-4.2.4_p7
 =sys-fs/udev-145-r1
@@ -46,3 +42,7 @@ media-sound/amarok:4.1
 =dev-lang/python-3.1.2-r4
 =dev-libs/openssl-1.0.0a-r3
 =sys-apps/grep-2.6.3
+>net-p2p/ktorrent-2.2.8-r2
+=net-p2p/ktorrent-4.0.3
+=net-p2p/ktorrent-3.3.4
+=dev-lang/python-2.7.1
