--- a/paludis/etc/use.conf
+++ b/paludis/etc/use.conf
@@ -1,3 +1,4 @@
+#*/* INPUT_DEVICES: -* evdev
 */* INPUT_DEVICES: -* keyboard mouse
 */* VIDEO_CARDS: -* nvidia
 
@@ -10,9 +11,9 @@
 */* paludis_hooks_auto-patch paludis_hooks_compress-man paludis_hooks_eselect paludis_hooks_locale-purge paludis_hooks_update-eix
 
 */* strip -debug
-*/* acpi 3dnow 3dnowext mmx mmxext sse sse2 ssse3 acpi -apm -ieee1394 -lirc lm_sensors -pcmcia -pda usb -v4l
+*/* acpi 3dnow 3dnowext mmx mmxext sse sse2 ssse3 acpi -apm -ieee1394 -lirc lm_sensors -pcmcia -pda usb v4l v4l2
 */* a52 aac alsa -gstreamer -arts -esd -nas -oss -xmms -accessibility
-*/* -opengl -tiff -poppler-data
+*/* -opengl -tiff -poppler-data xvmc
 */* -aim -icq -yahoo -msn -jingle
 */* -ipv6 -slp -bluetooth
 */* -nis -ldap -kerberos
