--- a/paludis/etc/use.conf.d/per-package.conf
+++ b/paludis/etc/use.conf.d/per-package.conf
@@ -6,6 +6,7 @@ app-editors/emacs gzip-el spell tiff
 app-editors/gvim gtk cscope
 
 app-emulation/emul-linux-x86-soundlibs arts
+app-emulation/vmware-workstation amd64
 app-misc/mc -samba -ncurses
 app-misc/screen multiuser
 
@@ -13,20 +14,24 @@ app-office/akonadi-server -mysql
 app-text/lcdf-typetools kpathsea
 app-text/texlive -X -xml -png
 app-text/texlive-core -X
-app-text/poppler qt3
+app-text/poppler qt3 cairo
 app-text/ptex -unicode -iconv -X
 
 dev-cpp/gtkmm accessibility
+dev-cvs/git -tk -webdav
 dev-lang/erlang doc smp kpoll
 dev-java/sun-jre-bin nsplugin
 dev-lang/perl ithreads
 dev-lang/php calendar session spl nls
+dev-lang/python sqlite
 dev-libs/boost debug doc icu bjam eselect python expat tools -strip
+dev-libs/libxml2 python
 dev-scheme/guile deprecated discouraged
 dev-util/cmake -qt4 -ncurses
-dev-util/git tk
-dev-vcs/subversion -kde -perl -python -berkdb -webdav-neon -dso extras vim-syntax
+dev-util/git -tk -webdav
+dev-vcs/subversion -kde -perl -python -berkdb webdav-neon -dso extras vim-syntax
 
+kde-base/kdm -pam
 kde-base/kopete addbookmarks alias autoreplace connectionstatus contactnotes highlight history irc latex nowlistening sametime sms statistics texteffect
 
 mail-client/mozilla-thunderbird mozcalendar
@@ -39,9 +44,11 @@ media-sound/amarok -mysql mp4 real
 media-sound/alsa-utils -midi
 media-sound/audacity id3tag ladspa libsamplerate soundtouch twolame
 media-sound/sox amr ao sndfile
+media-tv/xawtv xext
 media-video/mplayer enca real quicktime -doc
 
 media-gfx/graphviz gtk pango
+media-gfx/picasa nsplugin
 
 net-analyzer/trafshow -slang
 net-analyzer/wireshark gtk pcap
@@ -64,6 +71,7 @@ net-wireless/bluez-utils -dbus udev
 >=net-wireless/bluez-utils-3.8 udev fuse glib obex
 net-voip/sipp ssl pcap
 
+sys-apps/busybox -pam
 sys-apps/hal  -acpi -X -consolekit -crypt 
 # HAL don't like `zlib` here ;()
 sys-apps/pciutils -zlib
@@ -74,10 +82,14 @@ sys-kernel/linux-headers gcc64
 sys-libs/glibc userlocales glibc-omitfp nptlonly
 
 
+x11-base/xorg-server -udev
 x11-libs/qt
+x11-libs/qt-gui
 x11-libs/qt-qt3support -kde
 x11-libs/qt-webkit -kde
 x11-misc/xscreensaver insecure-savers
 sys-apps/initng-ifiles net runlevels vim fixes
 mail-mta/exim dovecot-sasl exiscan exiscan-acl ldap lmtp mysql radius sasl spf srs
-
+www-plugins/adobe-flash -32bit -multilib
+www-client/lynx -ssl gnutls
+www-plugins/google-talkplugin 64bit -multilib
