masked hal, libnotify, notification-daemon

--- a/paludis/etc/use.conf
+++ b/paludis/etc/use.conf
@@ -12,7 +12,7 @@
 
 */* strip -debug
 */* acpi 3dnow 3dnowext mmx mmxext sse sse2 ssse3 acpi -apm -ieee1394 -lirc lm_sensors -pcmcia -pda usb v4l v4l2
-*/* a52 aac alsa -gstreamer -arts -esd -nas -oss -xmms -accessibility
+*/* a52 aac alsa -gstreamer -arts -esd -nas -oss -xmms -accessibility -libnotify -startup-notification -hal
 */* -opengl -tiff -poppler-data xvmc
 */* -aim -icq -yahoo -msn -jingle
 */* -ipv6 -slp -bluetooth
