--- a/paludis/etc/use.conf.d/per-package.conf
+++ b/paludis/etc/use.conf.d/per-package.conf
@@ -82,6 +82,7 @@ sys-kernel/linux-headers gcc64
 sys-libs/glibc userlocales glibc-omitfp nptlonly
 
 
+
 x11-base/xorg-server -udev
 x11-libs/qt
 x11-libs/qt-gui
@@ -91,5 +92,6 @@ x11-misc/xscreensaver insecure-savers
 sys-apps/initng-ifiles net runlevels vim fixes
 mail-mta/exim dovecot-sasl exiscan exiscan-acl ldap lmtp mysql radius sasl spf srs
 www-plugins/adobe-flash -32bit -multilib
+www-client/firefox -startup-notification
 www-client/lynx -ssl gnutls
 www-plugins/google-talkplugin 64bit -multilib
