--- a/paludis/etc/package_mask.conf
+++ b/paludis/etc/package_mask.conf
@@ -5,6 +5,7 @@ kde-base/*:4.2
 kde-base/*:4.3
 kde-base/*:4.4
 kde-base/*:4.5
+kde-base/*:4.6
 >=kde-base/kcalc-4.3
 =net-analyzer/wireshark-9999
 =net-analyzer/wireshark-scm
