new masks and uses

--- a/portage/etc/make.conf
+++ b/portage/etc/make.conf
@@ -4,14 +4,14 @@ CXXFLAGS="${CFLAGS}"
 LDFLAGS="${LDFLAGS} -Wl,-O1"
 MAKEOPTS="-j2"
 
-G_USE_HARDWARE="acpi -3dnow -3dnowext mmx mmxext sse sse2 ssse3 -apm -bluetooth -ieee1394 -lirc -pcmcia -pda usb -v4l -cups"
+G_USE_HARDWARE="acpi -3dnow -3dnowext mmx mmxext sse sse2 ssse3 -apm -bluetooth -ieee1394 -lirc -pcmcia -pda usb -v4l -cups -hal"
 G_USE_SND="a52 aac alsa -gstreamer -arts -esd mp3 -nas ogg -oss vorbis -xmms"
 G_USE_PIC="-opengl -tiff -png -xml kpathsea"
 G_USE_IM="-aim -icq -yahoo -msn -jabber -jingle"
 G_USE_PROTOCOL="-ipv6 -pppd"
 G_USE_SERVICES="hal -ldap -nis"
 #G_USE_TEXT="exif expat iconv pcre pdf readline tetex tidy truetype unicode xml xsl"
-G_USE_TEXT="readline truetype -luatex"
+G_USE_TEXT="readline truetype -luatex -spell"
 #G_USE_DB="innodb mysqli mysql sqlite sqlite3"
 G_USE_DB="-mysql -berkdb"
 G_USE_X="X dga dri -xinerama"
