--- a/paludis/etc/use.conf
+++ b/paludis/etc/use.conf
@@ -11,8 +11,9 @@
 */* paludis_hooks_auto-patch paludis_hooks_compress-man paludis_hooks_eselect paludis_hooks_locale-purge paludis_hooks_update-eix
 
 */* strip -debug
-*/* acpi 3dnow 3dnowext mmx mmxext sse sse2 ssse3 acpi -apm -ieee1394 -lirc lm_sensors -pcmcia -pda usb v4l v4l2
-*/* a52 aac alsa -gstreamer -arts -esd -nas -oss -xmms -accessibility -libnotify -startup-notification -hal
+*/* -acpi 3dnow 3dnowext mmx mmxext sse sse2 ssse3 -apm -ieee1394 -lirc lm_sensors -pcmcia -pda usb v4l v4l2
+#*/* a52 aac alsa -gstreamer -arts -esd -nas -oss -xmms -accessibility -libnotify -startup-notification -hal
+*/* a52 aac alsa -gstreamer -arts -esd -nas -oss -xmms -libnotify -startup-notification -hal
 */* -opengl -tiff -poppler-data xvmc
 */* -aim -icq -yahoo -msn -jingle
 */* -ipv6 -slp -bluetooth
