--- a/paludis/etc/package_mask.conf
+++ b/paludis/etc/package_mask.conf
@@ -334,8 +334,9 @@ media-sound/amarok:4.1
 =net-p2p/ktorrent-4.0.3
 =net-p2p/ktorrent-3.3.4
 =dev-lang/python-2.7.1
-=sys-libs/glibc-2.13-r1
-=sys-libs/glibc-2.13-r2
 =net-fs/autofs-5.0.5-r2
 =net-im/skype-2.2.0.25
 =x11-base/xorg-server-1.10.2
+=net-im/skype-2.2.0.35-r1
+=app-portage/eix-0.22.9
+=x11-base/xorg-server-1.10.3
