--- a/paludis/etc/use.conf.d/per-package.conf
+++ b/paludis/etc/use.conf.d/per-package.conf
@@ -40,6 +40,9 @@ media-gfx/graphviz gtk pango
 media-libs/a52dec djbfft
 media-libs/freetype kpathsea
 media-libs/gd fontconfig
+media-libs/libgphoto2 canon cameras_canon
+media-libs/libpng apng
+=media-libs/phonon-4.5.0 -aqua -gstreamer -vlc xine
 media-sound/amarok -mysql mp4 real
 media-sound/alsa-utils -midi
 media-sound/audacity id3tag ladspa libsamplerate soundtouch twolame
@@ -86,8 +89,8 @@ sys-libs/glibc userlocales glibc-omitfp nptlonly
 x11-base/xorg-server -udev
 x11-libs/qt
 x11-libs/qt-gui
-x11-libs/qt-qt3support -kde
-x11-libs/qt-webkit -kde
+x11-libs/qt-qt3support kde
+x11-libs/qt-webkit kde
 x11-misc/xscreensaver insecure-savers
 sys-apps/initng-ifiles net runlevels vim fixes
 mail-mta/exim dovecot-sasl exiscan exiscan-acl ldap lmtp mysql radius sasl spf srs
