set note color to green

--- a/colorgcc/.colorgccrc
+++ b/colorgcc/.colorgccrc
@@ -57,3 +57,7 @@ errorFileNameColor: red
 errorNumberColor:   red
 errorMessageColor:  red
 
+noteFileNameColor: green
+noteNumberColor: green
+noteMessageColor: green
+
