--- a/paludis/etc/package_mask.conf
+++ b/paludis/etc/package_mask.conf
@@ -337,6 +337,6 @@ media-sound/amarok:4.1
 =net-fs/autofs-5.0.5-r2
 =net-im/skype-2.2.0.25
 =x11-base/xorg-server-1.10.2
-=net-im/skype-2.2.0.35-r1
-=app-portage/eix-0.22.9
 =x11-base/xorg-server-1.10.3
+=x11-base/xorg-server-1.10.4
+=net-im/skype-2.2.0.35-r1
