add dlz use flag to bind

--- a/paludis/etc/use.conf.d/per-package.conf
+++ b/paludis/etc/use.conf.d/per-package.conf
@@ -56,7 +56,7 @@ media-gfx/picasa nsplugin
 net-analyzer/trafshow -slang
 net-analyzer/wireshark gtk pcap
 net-dialup/freeradius mysql -pam
-net-dns/bind resolvconf
+net-dns/bind resolvconf dlz
 net-dns/dnsmasq resolvconf
 net-misc/kamailio group_standard tls kex pv siputils auth auth_db db_mysql -debug
 net-misc/ser mysql radius
