--- a/paludis/etc/package_mask.conf
+++ b/paludis/etc/package_mask.conf
@@ -335,8 +335,8 @@ media-sound/amarok:4.1
 =net-p2p/ktorrent-3.3.4
 =dev-lang/python-2.7.1
 =net-fs/autofs-5.0.5-r2
-=net-im/skype-2.2.0.25
 =x11-base/xorg-server-1.10.2
 =x11-base/xorg-server-1.10.3
 =x11-base/xorg-server-1.10.4
-=net-im/skype-2.2.0.35-r1
+>=x11-libs/qt-meta-4
+=x11-base/xorg-server-1.10.4-r1
