add use flag nvidia

--- a/paludis/etc/use.conf
+++ b/paludis/etc/use.conf
@@ -14,7 +14,7 @@
 */* -acpi 3dnow 3dnowext mmx mmxext sse sse2 ssse3 -apm -ieee1394 -lirc lm_sensors -pcmcia -pda usb v4l v4l2
 #*/* a52 aac alsa -gstreamer -arts -esd -nas -oss -xmms -accessibility -libnotify -startup-notification -hal
 */* a52 aac alsa -gstreamer -arts -esd -nas -oss -xmms -libnotify -startup-notification -hal
-*/* -opengl -tiff -poppler-data xvmc
+*/* -opengl -tiff -poppler-data xvmc nvidia
 */* -aim -icq -yahoo -msn -jingle
 */* -ipv6 -slp -bluetooth
 */* -nis -ldap -kerberos
