--- a/paludis/etc/use.conf.d/per-package.conf
+++ b/paludis/etc/use.conf.d/per-package.conf
@@ -18,7 +18,7 @@ app-text/poppler qt3 cairo
 app-text/ptex -unicode -iconv -X
 
 dev-cpp/gtkmm accessibility
-dev-cvs/git -tk -webdav
+dev-vcs/git -tk -webdav -subversion -curl
 dev-lang/erlang doc smp kpoll
 dev-java/sun-jre-bin nsplugin
 dev-lang/perl ithreads
